# small_uid-rs

./: Cargo.toml  LICENSE-APACHE.txt  LICENSE-MIT.txt  README.md
src/: checking.rs  error.rs  generation.rs  lib.rs  test.rs
