[package]
name = "small_uid"
authors = ["Isa Al-Ula"]
version = "0.2.1"
edition = "2021"
readme = "README.md"
description = "a u64 bits lexicographically sortable unique identifier implementation"
keywords = ["small", "ulid", "uuid", "sortable", "identifier"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/al-ula/small_uid"

[dependencies]
base64-url = "3.0.0"
rand = "0.9.0-alpha.2"
serde = { version = "1.0.210", features = ["derive"] }